# 3DGameProgram

./: .gitignore  CMakeLists.txt  SDLWindow.cpp  main.cpp  t3dconsolealpha1.cpp
Math/: CMakeLists.txt  EulerAngles.cpp  EulerAngles.h  Geometry.cpp  Geometry.h  MathUtil.h  Matrix.cpp  Matrix.h  Matrix.hpp  Quaternion.cpp  Quaternion.h  Vector3.hpp
SoftRender/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  EulerAngles.cpp  EulerAngles.h  Geometry.cpp  Geometry.h  MathUtil.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Model.h  ObjParser.cpp  ObjParser.h  Quaternion.cpp  Quaternion.h  Renderer.cpp  Renderer.h  SDL2Window.cpp  SDL2Window.h  Scene.cpp  Scene.h  Shader.h  Vector3.h  Vector3.hpp
T3DLib/: t3dlib1.h
Test/: test.lua
Third/include/glad/: glad.h
